css/styles.css
* {

    box-sizing: border-box;
    font-family: 'Marvel', sans-serif;

}

body,
html {
    background: #1e262c;
    color: #fff;
    font-size: 16px;
    margin: 0 auto;
    min-width: 320px;
}

img {
    display: block;
    max-width: 100%;
    height: auto;
}


header {
    background-image: url("https://images2.alphacoders.com/926/thumb-1920-926868.jpg");
    background-attachment: fixed;
    background-size: cover;
    width: 100%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding-left: 15px;
    /* margin-top: 10px; */
    min-width: 320px;
    height: 100vh;

}

nav {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background: #1e262c;
    /* opacity: .9; */
    min-height: 72px;
    z-index: 1;
}

nav li {
    list-style: none;
    display: inline-block;
    
    /* line-height: 62px; */
}

nav li a {
    border-left: solid #04497e;
    text-decoration: none;
    color: floralwhite;
    display: block;
    padding: 0px 20px;
    font-size: 14px;
    font-weight: 700;
    text-transform: capitalize;
}

nav li a:hover,
nav li a:focus {
    border-bottom: 2px solid #fb3;
    border-left: 0;


}

.landing {
    margin-top: 125px;
    padding: 5px;
    margin-bottom: 10px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
 
}

.landing div{
    display: flex;
    justify-content: center;
    align-items: center;
    /* width: 50%; */
}

.landing #header_img {
    max-width: 280px; 
    border-radius: 8px;
 
}



.landing>div:nth-child(2) {
    display: flex;
    border-left: 3px solid #fff;
    /* background: #1e262c; */
    margin-left: 50px;
    padding-left: 20px;
/*     
    width: 50%; */
}

.landing button {
    width: 120px;
    height: 45px;
    border-radius: 4px;
    border: 0;
    background: #1e262c;
    color: #fff;
}


.landing button:hover,
.landing button:focus {
    border: #fff;
    border: 2px solid #ccc;
    /* box-shadow: 0px 0px 20px 2px #04497e; */
}



section {
    padding: 10px;
    width: 100%;
    margin-left: 0;
    padding-bottom: 25px;
}

section h2 {
    text-align: center;
    font-size: 1.9em;

}

section li a,
section p {
    font-size: 1.2em;
}

.grey {
    background: #ccc;
}



#screen_shots {
    /* display: flex; */
    /* justify-content: space-around; */
    white-space: nowrap;
    overflow-x: scroll;
    overflow-y: hidden;
    /* background: #ccc; */
    width: 100%;


}

#screen_shots::-webkit-scrollbar {
    /* WebKit */
    display: none;
}


#screen_shots .card {
    border: 1px solid #1e262c;
    display: inline-block;
    max-width: 320px;
    /* https://images7.alphacoders.com/996/thumb-1920-996259.jpg */
}

#exosuits,
#dangerous,
#combat_ready {
    background-image: url("https://images2.alphacoders.com/926/thumb-1920-926545.jpg");
    background-attachment: fixed;
    background-size: cover;
    background-position: center;
    display: grid;
    grid-template-columns: 50% auto;
    grid-column-gap: 5px;
    min-height: 80vh;
    /* background: #1e262c; */
}


.content_left {
    display: grid;
    align-items: center;
    text-align: center;
    color: #1e1e1e;
    font-weight: 700;
    padding: 0 10px 0 10px;
}

.content_left h2 {
    color: #04497e;
    text-shadow: 1px 1px 4px #222;
}

.content_right {
    animation-name: anthem_rain;
    animation-duration: 12s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;

}


@keyframes anthem_rain {
    0% {
        border-left: solid #fb3;

    }

    25% {
        border-left: solid #ccc;

    }

    50% {
        border-left: solid #04497e;
    }

    75% {
        border-left: solid #05b413;
    }

    100% {
        border-left: solid #da250d;
    }
}


#javelin {
    display: grid;
    grid-template-rows: 1fr auto;
    grid-row-gap: 5px;
    padding-bottom: 90px;

}

#javelins {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 10px;
    padding-bottom: 30px;
}

#javelins div {
    position: relative;
    border-radius: 8px;
    background: #fff;
    min-height: 320px;

}


#javelins div span {
    position: absolute;
    bottom: 0;
    left: 0;
    height: 30px;
    background: #1e1e1e;
    opacity: .8;
    text-align: center;
    width: 100%;
    color: #fff;
    border-top: solid #1e262c;
    text-transform: capitalize;

}

#combat_ready {
    background-image: url("https://images7.alphacoders.com/926/thumb-1920-926629.jpg");
}

#combat_ready .content_right {
    display: grid;
    align-items: center;
    text-align: center;
    color: #fff;
    font-weight: 700;
    padding: 0 10px 0 10px;
}

#combat_ready .content_right h2 {
    color: #04497e;
    text-align: center;
    text-shadow: 1px 1px 1px #222;
}




#desc_over_sys {
    background: #1e262c;
    display: grid;
    grid-template-rows: repeat(3, auto);
    grid-row-gap: 10px;
    opacity: .9;

}

#desc_over_sys li {
    list-style: square;
    line-height: 1.8em;
}

#description,
#overview,
#system_requirements {
    display: grid;
    grid-template-rows: repeat(2, auto);
    grid-gap: 10px;
    background: rgb(4, 161, 161);
    padding-bottom: 30px;
    margin: 15px;
    border: solid #fff;

}

.desc_header h2 {
    text-transform: capitalize;
    /* border-bottom: solid #fb3; */

}

.desc_content {
    padding: 10px;
    display: grid;
    grid-template-columns: repeat(2, auto);
    grid-column-gap: 10px;
    /* line-height: 1.75; */
    justify-self: center;
    align-self: center;


}

.desc_content .desc_right,
.desc_content .desc_left {
    padding: 15px;
}

#dangerous {
    background-image: url("https://images.alphacoders.com/926/thumb-1920-926628.jpg");
    grid-template-columns: 2fr 50%;
}

#dangerous .content_right {
    display: grid;
    align-items: center;
    text-align: center;
    font-weight: 700;
    padding: 0 10px 0 10px;
}

#dangerous .content_right #content {
    background: #1e262c;
    padding-bottom: 20px;
    opacity: .7;
}

#dangerous .content_right #content:hover {
    border: 1px solid #fff;
    opacity: .9;
    background: teal;
}


#dangerous .content_right span {
    color: #05b413;
}

#dangerous form {
    display: grid;
    grid-template-rows: repeat(2, auto);
    grid-row-gap: 10px;

}

#dangerous form .labels {
    width: 100%;
    font-size: 18px;
}

form .content-right>#email {
    width: 80%;
    height: 36px;
    text-align: center;
    background: #1e262c;
    font-size: 16px;
    opacity: 1;
    border: 2px solid #fff;
    color: floralwhite;

}

::placeholder {
    color: #fff;

}

form .submit>#submit_button {
    width: 30%;
    height: 40px;
    text-align: center;
    cursor: pointer;
    color: #fff;
    border-radius: 5px;
    background-color: #1e262c;
    opacity: .7;
    border: 1px solid #fff;

}

#submit_button:hover,
#submit_button:focus {
    opacity: 1;
    border: 3px solid #fff;


}


/* media queries */
@media (max-width:913px) {

    header{
        background-image: url("https://images7.alphacoders.com/926/thumb-1920-926629.jpg");
        background-position: center;
    }


    nav ul {
        white-space: nowrap;
        overflow-x: scroll;
        overflow-y: hidden;
        width: 100%;
    }

    nav ul::-webkit-scrollbar {
        /* WebKit */
        display: none;
    }

    
.landing #header_img {
   opacity: .2;
}

    .landing button {
        opacity: .9;
        background: teal;
        
    }




}


@media (max-width:514px) {

    header{
    
    }
    .landing div:nth-child(2){
        margin-top: 10px;
    }


    section h2 {
        text-align: left;
    
    }
    .content_left {
        text-align: left;

    }


    #combat_ready {
        background-image: url("https://images5.alphacoders.com/843/thumb-1920-843439.jpg");
    }
    
    #combat_ready .content_right {
        text-align: right;
        /* color:#1e262c; */
    }
    
    #combat_ready .content_right h2 {
        text-align: right;
        color: #da250d;
        
    }


}



  

